--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>JS Bin</title>
+    <title>ICEA Members</title>
+
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/main.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -12,11 +16,7 @@
         <div class="panel panel-default">
             <div class="panel-body text-center">
                 <div class="panel-inner">
-                    <img id="member-logo" src="http://www.usgeothermal.com/images/MainLogo.png"
-                        alt="">
-                    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-                    <link href="/assets/css/main.css" rel="stylesheet" type="text/css" />
-                    <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+                    <img id="member-logo" src="http://www.usgeothermal.com/images/MainLogo.png" alt="">
                     <h1 id="icea-member"></h1>
                     <h2>Energy Production (MwH)</h2>
                     <div class="row">
@@ -52,9 +52,9 @@
             </div>
         </div>
     </div>
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
