Remove Mixed Content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="panel panel-default">
             <div class="panel-body text-center">
                 <div class="panel-inner">
-                    <img id="member-logo" src="http://www.usgeothermal.com/images/MainLogo.png" alt="">
+                    <img id="member-logo" src="" alt="">
                     <h1 id="icea-member"></h1>
                     <h2>Energy Production (MwH)</h2>
                     <div class="row">
