--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <i class="fa fa-sun-o fa-4x"></i>
                         <h3 id="">Saves</h3>
                         <h3 id="carbon"></h3>
-                        <h3>lbs of carbon emmisions</h3>
+                        <h3>lbs of carbon emissions</h3>
                     </div>
                 </div>
             </div>
