--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h3>Homes Annually</h3>
                 </div>
                 <div class="col-xs-6">
-                    <i class="fa fa-home fa-4x"></i>
+                    <i class="fa fa-sun-o fa-4x"></i>
                     <h3>Saves</h3>
                     <h3 id="carbon-total"></h3>
                     <h3>lbs of carbon emissions</h3>
