Improve Member Information UI

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <div class="panel panel-default icea-panel">
             <div class="panel-body text-center">
                 <div class="panel-inner">
-                    <img id="member-logo" src="" alt="">
+                    <div class="member-info">
+                        <img id="member-logo" src="" alt="">
+                        <h1 id="icea-member"></h1>
+                    </div>
                     <h2>Energy Production (MwH)</h2>
                     <div class="row border-box">
                         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
@@ -51,7 +54,8 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-12">
-                        <p class="card-summary">ICEA members power <span id="homes-total"></span> homes saving <span id="carbon-total"></span> lbs of carbon emissions annually!</p>
+                        <p class="card-summary">ICEA members power <span id="homes-total"></span> homes saving <span id="carbon-total"></span> lbs
+                            of carbon emissions annually!</p>
                     </div>
                 </div>
             </div>
