Theme Design Work

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                         <img id="member-logo" src="" alt="">
                         <h1 id="icea-member"></h1>
                     </div>
-                    <h2>Energy Production (MwH)</h2>
-                    <div class="row border-box">
+                    
+                    <div id="icea-data" class="row">
+                        <h2>ENERGY PRODUCTION (MwH)</h2>
                         <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
                         <div class="col-xs-4">
                             <h3>Day</h3>
