--- a/index.html
+++ b/index.html
@@ -25,36 +25,35 @@
                             <img id="member-logo" src="" alt="">
                             <h1 id="icea-member"></h1>
                         </div>
-                        <div id="icea-data" class="row">
-                            <div class="col-xs-4">
-                                <h3>Day</h3>
-                                <span id="icea-day"></span>
-                            </div>
-                            <div class="col-xs-4">
-                                <h3>Month</h3>
-                                <span id="icea-month"></span>
-                            </div>
-                            <div class="col-xs-4">
-                                <h3>Year</h3>
-                                <span id="icea-year"></span>
-                            </div>
-                        </div>
                     </div>
                     <div id="infographics" class="row">
-                        <div class="col-xs-6">
-                            <i class="fa fa-home fa-4x"></i>
-                            <h3 id="">Powers</h3>
-                            <h3 id="homes" class="data"></h3>
-                            <h3>Homes Annually</h3>
+                        <h2>Annually</h2><br>
+                        <div class="col-xs-1">
+                            <i class="fa fa-chevron-left fa-3x carousel-button-left" aria-hidden="true"></i>
                         </div>
-                        <div class="col-xs-6">
+                        <div class="col-xs-3">
+                            <i class="fa fa-home fa-4x"></i>
+                            <h3 class="verb">Powers</h3>
+                            <h3 id="homes" class="data"></h3>
+                            <h3>Homes</h3>
+                        </div>
+                        <div class="col-xs-4">
+                            <i class="fa fa-bolt fa-4x"></i>
+                            <h3 class="verb">Produces</h3>
+                            <h3 id="icea-year" class="data"></h3>
+                            <h3>kWh</h3>
+                        </div>
+                        <div class="col-xs-3">
                             <i class="fa fa-sun-o fa-4x"></i>
-                            <h3 id="">Saves</h3>
+                            <h3 class="verb">Saves</h3>
                             <h3 id="carbon" class="data"></h3>
                             <h3>lbs of carbon emissions</h3>
                         </div>
+                        <div class="col-xs-1">
+                            <i class="fa fa-chevron-right fa-3x carousel-button-right" aria-hidden="true"></i>
+                        </div>
                     </div>
-                    <div class="row">
+                    <div class="row" style="margin-top:20px;">
                         <div class="col-xs-12">
                             <p class="card-summary">ICEA members power <span id="homes-total"></span> homes saving <span id="carbon-total"></span>lbs
                                 of carbon emissions annually!</p>
