FIXES: Font size, Easy Disable, kWh => MWh

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <i class="fa fa-bolt fa-4x"></i>
                             <h3 class="verb">Produces</h3>
                             <h3 id="icea-year" class="data"></h3>
-                            <h3>kWh</h3>
+                            <h3>MWh</h3>
                         </div>
                         <div class="col-xs-3">
                             <i class="fa fa-sun-o fa-4x"></i>
